--- a/docs/package.json
+++ b/docs/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@carbonplan/components": "^11.1.1",
+    "@carbonplan/components": "^11.4.0",
     "@carbonplan/icons": "^1.1.0",
+    "@carbonplan/layouts": "^2.3.1",
     "@carbonplan/theme": "^7.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
