--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -11,13 +11,13 @@ repos:
         args: ['--autofix', '--indent=2', '--no-sort-keys']
 
   - repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 23.12.1
     hooks:
       - id: black
         args: ['--line-length', '100']
 
   - repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: 7.0.0
     hooks:
       - id: flake8
 
@@ -26,12 +26,12 @@ repos:
     hooks:
       - id: seed-isort-config
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: 5.13.2
     hooks:
       - id: isort
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: 'v2.5.1'
+    rev: 'v4.0.0-alpha.8'
     hooks:
       - id: prettier
         language_version: system
@@ -46,7 +46,7 @@ repos:
           |yaml|yml\
           )$"
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: 'v2.5.1'
+    rev: 'v4.0.0-alpha.8'
     hooks:
       - id: prettier
         language_version: system
